Update happy users cards.

--- a/layouts/partials/tools.html
+++ b/layouts/partials/tools.html
@@ -1,17 +1,17 @@
 <div class="pt-md-2 pb-md-5 teaser-card-container">
-  <div class="teaser-card mr-sm-4">
+  <div class="teaser-card mr-sm-4 mb-3 mb-sm-4">
     <h5 class="teaser-card-title">
       Delivery
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
           <img src="/images/home/integrations/tools-delivery-argo.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
           <img src="/images/home/integrations/tools-delivery-azure.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-delivery-gitlab.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
@@ -25,19 +25,19 @@
       </div>
     </div>
   </div>
-  <div class="teaser-card mr-lg-4">
+  <div class="teaser-card mr-lg-4 mb-3 mb-sm-4">
     <h5 class="teaser-card-title">
       Observability
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
           <img src="/images/home/integrations/tools-observability-dynatrace.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
           <img src="/images/home/integrations/tools-observability-grafana.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-observability-opentelementry.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
@@ -51,19 +51,19 @@
       </div>
     </div>
   </div>
-  <div class="teaser-card mr-sm-4 mr-lg-0">
+  <div class="teaser-card mr-sm-4 mr-lg-0 mb-3 mb-sm-4 mb-md-4">
     <h5 class="teaser-card-title">
       Testing
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
           <img src="/images/home/integrations/tools-testing-jmeter.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
           <img src="/images/home/integrations/tools-testing-litmus.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-testing-locust.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
@@ -77,19 +77,19 @@
       </div>
     </div>
   </div>
-  <div class="teaser-card mr-lg-4">
+  <div class="teaser-card mr-lg-4 mb-3 mb-sm-4 mb-lg-0">
     <h5 class="teaser-card-title">
       Notifications
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
           <img src="/images/home/integrations/tools-notifications-keptn.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
           <img src="/images/home/integrations/tools-notifications-slack.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-notifications-teams.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
@@ -103,19 +103,19 @@
       </div>
     </div>
   </div>
-  <div class="teaser-card mr-sm-4">
+  <div class="teaser-card mr-sm-4 mb-3 mb-sm-0">
     <h5 class="teaser-card-title">
       Automation
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
           <img src="/images/home/integrations/tools-automation-ansible.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
           <img src="/images/home/integrations/tools-automation-bash.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-automation-python.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
