--- a/assets/scss/components/_teaser-card.scss
+++ b/assets/scss/components/_teaser-card.scss
@@ -11,7 +11,6 @@
     border-radius: 13px;
     background-color: $white;
     padding: 40px 31px;
-    margin-bottom: 24px;
     box-shadow: 20px 20px 80px 0 rgba(2, 63, 107, 0.17);
     width: 100%;
 
@@ -58,7 +57,7 @@
       background-size: cover;
       box-shadow: none !important;
       background-repeat: no-repeat;
-      background: url('/images/home/add-tool.svg');
+      background-image: url('/images/home/add-tool.svg');
     }
 
   &--smallPadding {
