--- a/layouts/partials/teaser-cards.html
+++ b/layouts/partials/teaser-cards.html
@@ -1,5 +1,5 @@
 <div class="pt-md-2 pb-md-5 teaser-card-container">
-  <div class="teaser-card teaser-card--blue mr-sm-4">
+  <div class="teaser-card teaser-card--blue mr-sm-4 mb-3 mb-sm-4">
     <div class="teaser-card-picture">
       <picture>
         <img src="/images/home/capabilities/capabilities-01.svg">
@@ -12,7 +12,7 @@
     </div>
   </div>
 
-  <div class="teaser-card teaser-card--blue mr-lg-4">
+  <div class="teaser-card teaser-card--blue mr-lg-4 mb-3 mb-sm-4">
     <div class="teaser-card-picture">
       <picture>
         <img src="/images/home/capabilities/capabilities-02.svg">
@@ -25,7 +25,7 @@
     </div>
   </div>
 
-  <div class="teaser-card teaser-card--blue mr-sm-4 mr-lg-0">
+  <div class="teaser-card teaser-card--blue mr-sm-4 mr-lg-0 mb-3 mb-sm-4 mb-md-4">
     <div class="teaser-card-picture">
       <picture>
         <img src="/images/home/capabilities/capabilities-03.svg">
@@ -40,7 +40,7 @@
 
 
 
-  <div class="teaser-card teaser-card--blue mr-lg-4">
+  <div class="teaser-card teaser-card--blue mr-lg-4 mb-3 mb-sm-4 mb-lg-0">
     <div class="teaser-card-picture">
       <picture>
         <img src="/images/home/capabilities/capabilities-04.svg">
@@ -53,7 +53,7 @@
     </div>
   </div>
 
-  <div class="teaser-card teaser-card--blue pb-4 pb-lg-0 mr-sm-4">
+  <div class="teaser-card teaser-card--blue mr-sm-4 mb-3 mb-sm-0">
     <div class="teaser-card-picture">
       <picture>
         <img src="/images/home/capabilities/capabilities-05.svg">
