--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -52,7 +52,7 @@
       </div>
     </div>
     <div class="row pt-3 pt-md-0">
-      <div class="col-12">
+      <div class="col-12 pt-4">
         <p class="footer-text">Initially created by Dynatrace</p>
       </div>
     </div>
