--- a/layouts/partials/get-started.html
+++ b/layouts/partials/get-started.html
@@ -24,7 +24,7 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-5 d-flex flex-column justify-content-md-between pl-0 pr-0 pb-md-0">
+      <div class="col-12 col-md-5 d-flex flex-column justify-content-md-between pb-md-0">
         <img src="/images/home/cloud-native-computing-foundation.svg">
       </div>
     </div>
