--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -82,6 +82,11 @@
       background-color: $white;
       color: $primary;
       box-shadow: 0 2px 10px 0 rgba($black, 0.1);
+      height: 64px;
+
+      @media screen and (min-width: $bp-md) {
+        height: 80px;
+      }
 
       .container .main-menu ul li a {
         &:not(.button) {
