--- a/assets/scss/components/_slider.scss
+++ b/assets/scss/components/_slider.scss
@@ -2,20 +2,17 @@
   z-index: 100;
 
   &__track {
+    padding-top: 50px;
+    padding-bottom: 80px;
+
+    @media (min-width: $bp-md) {
+      padding-top: 0;
+      padding-bottom: 0;
+    }
 
     @media (min-width: $bp-lg) {
       overflow: visible !important;
     }
-
-    //&:after {
-    //  content: '';
-    //  position: absolute;
-    //  top: 0;
-    //  right: -20px;
-    //  height: 100%;
-    //  width: 100px;
-    //  background-image: url('/images/home/shadow-slider.png');
-    //}
   }
 
   &__slide {
@@ -26,11 +23,11 @@
     background-color: $white;
     border-radius: 13px;
     margin-right: 10px !important;
-    box-shadow: 20px 20px 80px 0px rgba(2, 63, 107, 0.17);
+    box-shadow: 20px 20px 50px 0px rgba(2, 63, 107, 0.17);
 
     @media (min-width: $bp-lg) {
       width: 690px !important;
-      margin-right: 25px !important;
+      margin-right: 80px !important;
       box-shadow: 20px 20px 80px 0px rgba(2, 63, 107, 0.17);
     }
 
@@ -38,7 +35,6 @@
       display: flex !important;
       width: 830px !important;
       margin-right: 80px !important;
-      //height: 380px !important;
     }
   }
 
@@ -98,11 +94,11 @@
         display: block;
 
         &--prev {
-          left: 10px;
+          left: -15px;
         }
 
         &--next {
-          right: 10px;
+          right: 172px;
         }
       }
 
@@ -119,7 +115,7 @@
   }
 
   .splide__pagination {
-    bottom: -42px;
+    bottom: 30px;
 
     @media (min-width: $bp-lg) {
       display: none !important;
