Update intro image.

--- a/assets/scss/components/_teaser-box.scss
+++ b/assets/scss/components/_teaser-box.scss
@@ -104,5 +104,11 @@
         }
       }
     }
+
+    &--negativeMargin {
+      @media screen and (min-width: $bp-xl) {
+        margin-top: -130px;
+      }
+    }
   }
 }
