--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -14,7 +14,7 @@
         {{ .Content }}
         {{ end }}
       </div>
-      <div class="col-12 col-md-6 teaser-box teaser-box--white teaser-box--intro ml-l-5 ml-xl-0">
+      <div class="col-12 col-md-6 teaser-box teaser-box--white teaser-box--intro ml-md-3 ml-xl-0">
         {{ with .Site.GetPage "section" "home/intro" }}
         {{ .Content }}
         {{ end }}
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="col-md-2"></div>
-      <div class="col-12 teaser-box pt-0 pl-0 pr-0">
+      <div class="col-12 teaser-box teaser-box--negativeMargin pt-0 pl-0 pr-0">
         <div class="d-none d-md-block">
           {{ partial "intro-svg.html" . }}
         </div>
