--- a/layouts/partials/teaser-cards.html
+++ b/layouts/partials/teaser-cards.html
@@ -65,7 +65,7 @@
       {{ end }}
     </div>
   </div>
-  <div class="teaser-card">
+  <div class="teaser-card teaser-card--verticalCentered">
     <div class="teaser-card-content teaser-card-content--blue teaser-card-content--courier">
       {{ with .Site.GetPage "section" "home/capabilities-06" }}
       {{ .Content }}
