--- a/layouts/partials/tools.html
+++ b/layouts/partials/tools.html
@@ -129,7 +129,7 @@
       </div>
     </div>
   </div>
-  <div class="teaser-card teaser-card--darkBlue">
+  <div class="teaser-card teaser-card--darkBlue teaser-card--verticalCentered">
     <div class="teaser-card-content teaser-card-content--white teaser-card-content--courier">
       {{ with .Site.GetPage "section" "home/tools-06" }}
       {{ .Content }}
