Update tools + is an a element.

--- a/layouts/partials/tools.html
+++ b/layouts/partials/tools.html
@@ -20,8 +20,8 @@
         <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/integrations/tools-delivery-jenkins.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding teaser-card--outline">
-        </div>
+        <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn/keptn">
+        </a>
       </div>
     </div>
   </div>
@@ -46,8 +46,8 @@
         <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="">
         </div>
-        <div class="teaser-card teaser-card--smallPadding teaser-card--outline">
-        </div>
+        <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn/keptn">
+        </a>
       </div>
     </div>
   </div>
@@ -72,8 +72,8 @@
         <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/integrations/tools-testing-selenium.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding teaser-card--outline">
-        </div>
+        <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn/keptn">
+        </a>
       </div>
     </div>
   </div>
@@ -98,8 +98,8 @@
         <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/integrations/tools-notifications-webhook.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding teaser-card--outline">
-        </div>
+        <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn/keptn">
+        </a>
       </div>
     </div>
   </div>
@@ -124,8 +124,8 @@
         <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/integrations/tools-automation-webhook.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding teaser-card--outline">
-        </div>
+        <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn/keptn">
+        </a>
       </div>
     </div>
   </div>
