Update start now.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -44,7 +44,7 @@ page-home
         <div class="d-block d-lg-flex">
           <div class="d-block">
             <a class="button button--filledGreen d-inline-block mb-3 mb-lg-0 mr-0 mr-lg-3" href="https://github.com/keptn/keptn">
-              Start now
+              Start now!
             </a>
           </div>
           <div class="d-block">
@@ -85,7 +85,7 @@ page-home
 
         <div class="d-block d-md-flex">
           <a class="button d-inline-block button--filledGreen" href="https://github.com/keptn/keptn">
-            Start now
+            Start now!
           </a>
         </div>
       </div>
@@ -120,7 +120,7 @@ page-home
         {{ end }}
         <div class="d-inline-block d-md-flex">
           <a class="button button--filledGreen" href="https://github.com/keptn/keptn">
-            Start now
+            Start now!
           </a>
         </div>
       </div>
