--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -22,7 +22,7 @@
           <div class="d-block">
             <a class="d-inline-block button button--filledGreen mb-3 mb-lg-0 mr-0 mr-lg-3"
                href="https://github.com/keptn/keptn">
-              Start now
+              Start now!
             </a>
           </div>
           <div class="d-block">
