Update intro graphic padding.

--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="col-md-2"></div>
-      <div class="col-12 teaser-box teaser-box--negativeMargin pt-0 pl-0 pr-0">
+      <div class="col-12 teaser-box teaser-box--negativeMargin pt-3 pt-xl-0 pl-0 pr-0">
         <div class="d-none d-md-block">
           {{ partial "intro-svg.html" . }}
         </div>
