Add integrations navigation point.

--- a/layouts/partials/main-menu-mobile.html
+++ b/layouts/partials/main-menu-mobile.html
@@ -17,6 +17,12 @@
       </a>
     </li>
 
+    <li class="menu-item-integrations">
+      <a href="https://github.com/keptn-contrib">
+        <span>Integrations</span>
+      </a>
+    </li>
+
     <li class="menu-item-community">
       <a href="https://github.com/keptn/community" target="_blank">
         <span>Community</span>
