Add all links that we have.

--- a/layouts/partials/get-started.html
+++ b/layouts/partials/get-started.html
@@ -10,7 +10,7 @@
 
           <div class="d-block d-lg-flex">
             <div class="d-block">
-              <a href="#" class="d-inline-block button button--filledGreen mb-3 mb-lg-0 mr-lg-2">Start now!</a>
+              <a href="https://keptn.sh/docs/quickstart/" class="d-inline-block button button--filledGreen mb-3 mb-lg-0 mr-lg-2">Start now!</a>
               &nbsp;&nbsp;&nbsp;
             </div>
             <div class="d-block">
@@ -18,7 +18,7 @@
               &nbsp;&nbsp;&nbsp;
             </div>
             <div class="d-block">
-              <a href="#" class="button button--outlinedWhite d-inline-block">Read docs</a>
+              <a href="https://keptn.sh/docs/" class="button button--outlinedWhite d-inline-block">Read docs</a>
             </div>
           </div>
         </div>
