--- a/layouts/partials/teaser-cards.html
+++ b/layouts/partials/teaser-cards.html
@@ -71,7 +71,7 @@
       {{ .Content }}
       {{ end }}
       <div class="col-12 col-md-10 pr-0 pl-0 pt-4">
-        <a class="button button--filledGreen d-inline-block" href="https://github.com/keptn/keptn">
+        <a class="button button--filledGreen d-inline-block" href="https://keptn.sh/why-keptn/">
           Explore more
         </a>
       </div>
