--- a/layouts/partials/tools.html
+++ b/layouts/partials/tools.html
@@ -20,7 +20,7 @@
         <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/integrations/tools-delivery-jenkins.png">
         </div>
-        <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn/keptn">
+        <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn-sandbox/contributing">
         </a>
       </div>
     </div>
@@ -46,7 +46,7 @@
         <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="">
         </div>
-        <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn/keptn">
+        <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn-sandbox/contributing">
         </a>
       </div>
     </div>
@@ -72,7 +72,7 @@
         <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/integrations/tools-testing-selenium.png">
         </div>
-        <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn/keptn">
+        <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn-sandbox/contributing">
         </a>
       </div>
     </div>
@@ -98,7 +98,7 @@
         <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/integrations/tools-notifications-webhook.png">
         </div>
-        <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn/keptn">
+        <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn-sandbox/contributing">
         </a>
       </div>
     </div>
@@ -124,7 +124,7 @@
         <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/integrations/tools-automation-webhook.png">
         </div>
-        <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn/keptn">
+        <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn-sandbox/contributing">
         </a>
       </div>
     </div>
@@ -135,7 +135,7 @@
       {{ .Content }}
       {{ end }}
       <div class="col-12 col-md-10 pr-0 pl-0 pt-4">
-        <a class="button button--filledGreen d-inline-block" href="https://github.com/keptn/keptn">
+        <a class="button button--filledGreen d-inline-block" href="https://github.com/keptn-contrib/">
           Explore more
         </a>
       </div>
