--- a/layouts/index.html
+++ b/layouts/index.html
@@ -43,7 +43,7 @@ page-home
 
         <div class="d-block d-lg-flex">
           <div class="d-block">
-            <a class="button button--filledGreen d-inline-block mb-3 mb-lg-0 mr-0 mr-lg-3" href="https://github.com/keptn/keptn">
+            <a class="button button--filledGreen d-inline-block mb-3 mb-lg-0 mr-0 mr-lg-3" href="https://keptn.sh/docs/quickstart/">
               Start now!
             </a>
           </div>
@@ -53,7 +53,7 @@ page-home
             </a>
           </div>
           <div class="d-block">
-            <a class="button button--outlinedBlue d-inline-block" href="https://github.com/keptn/keptn">
+            <a class="button button--outlinedBlue d-inline-block" href="https://keptn.sh/docs/0.8.x/monitoring/">
               Read docs
             </a>
           </div>
@@ -84,7 +84,7 @@ page-home
         {{ end }}
 
         <div class="d-block d-md-flex">
-          <a class="button d-inline-block button--filledGreen" href="https://github.com/keptn/keptn">
+          <a class="button d-inline-block button--filledGreen" href="https://keptn.sh/docs/quickstart/">
             Start now!
           </a>
         </div>
@@ -119,7 +119,7 @@ page-home
         {{ .Content }}
         {{ end }}
         <div class="d-inline-block d-md-flex">
-          <a class="button button--filledGreen" href="https://github.com/keptn/keptn">
+          <a class="button button--filledGreen" href="https://keptn.sh/docs/quickstart/">
             Start now!
           </a>
         </div>
