--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -21,7 +21,7 @@
         <div class="d-block d-lg-flex">
           <div class="d-block">
             <a class="d-inline-block button button--filledGreen mb-3 mb-lg-0 mr-0 mr-lg-3"
-               href="https://github.com/keptn/keptn">
+               href="https://keptn.sh/docs/quickstart/">
               Start now!
             </a>
           </div>
