Update href for see it in action to better find it.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -48,7 +48,7 @@ page-home
             </a>
           </div>
           <div class="d-block">
-            <a class="button button--outlinedBlue d-inline-block mb-3 mb-lg-0 mr-0 mr-lg-3" href="https://github.com/keptn/keptn">
+            <a class="button button--outlinedBlue d-inline-block mb-3 mb-lg-0 mr-0 mr-lg-3" href="#">
               See it in action
             </a>
           </div>
