Update hero graphic in own container

--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -1,6 +1,6 @@
 <div class="intro">
   {{ partial "announcement.html" . }}
-  <div class="container pt-5 pb-3 pb-md-0">
+  <div class="container pt-5">
     <div class="row pt-4 pt-md-5">
       <div class="col-12 teaser-box">
         <div class="logo-intro">
@@ -35,7 +35,11 @@
         </div>
       </div>
       <div class="col-md-2"></div>
-      <div class="col-12 teaser-box teaser-box--negativeMargin pt-3 pt-xl-0 pl-0 pr-0">
+    </div>
+  </div>
+  <div class="container pl-0 pr-0 pt-4 pt-xl-0 pb-5">
+    <div class="row pb-4">
+      <div class="col-12 teaser-box teaser-box--negativeMargin pl-0 pr-0">
         <div class="d-none d-md-block">
           {{ partial "intro-svg.html" . }}
         </div>
@@ -45,4 +49,7 @@
       </div>
     </div>
   </div>
+
+
+</div>
 </div>
