Update intro text margins.

--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -14,7 +14,7 @@
         {{ .Content }}
         {{ end }}
       </div>
-      <div class="col-12 col-md-6 teaser-box teaser-box--white teaser-box--intro ml-md-3 ml-xl-0">
+      <div class="col-12 col-md-6 teaser-box teaser-box--white teaser-box--intro ml-md-5 ml-lg-0">
         {{ with .Site.GetPage "section" "home/intro" }}
         {{ .Content }}
         {{ end }}
