Update bottom spacing.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -176,7 +176,7 @@ page-home
     </div>
   </div>
   <div class="container pb-5 clients pl-0 pr-0 pl-lg-3 pr-lg-3">
-    <div class="row pt-2 pt-md-4 pb-md-5">
+    <div class="row pt-2 pt-md-4 pb-4">
       <div class="col-12">
         <div class="splide">
           <div class="splide__track">
