--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -1,4 +1,4 @@
-<div class="intro">
+<div class="intro p-relative">
   {{ partial "announcement.html" . }}
   <div class="container pt-5">
     <div class="row pt-4 pt-md-5">
