--- a/layouts/partials/teaser-cards.html
+++ b/layouts/partials/teaser-cards.html
@@ -1,4 +1,4 @@
-<div class="pt-md-2 pb-md-5 teaser-card-container">
+<div class="pt-md-2 pb-4 teaser-card-container">
   <div class="teaser-card teaser-card--blue mr-sm-4 mb-3 mb-sm-4">
     <div class="teaser-card-picture">
       <picture>
