--- a/layouts/partials/tools.html
+++ b/layouts/partials/tools.html
@@ -1,4 +1,4 @@
-<div class="pt-md-2 pb-md-5 teaser-card-container">
+<div class="pt-md-2 pb-4 teaser-card-container">
   <div class="teaser-card mr-sm-4 mb-3 mb-sm-4">
     <h5 class="teaser-card-title">
       Delivery
