--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -36,21 +36,17 @@
 
     &:after {
       position: absolute;
-      top: 195px;
       left: 0;
+      bottom: -10px;
       display: inline-block;
       width: 100%;
-      height: 1000px;
+      height: 500px;
       content: "";
       background-image: url('/images/home/hero/waves-intro.jpg');
       background-repeat-x: repeat;
-      background-position-x: -300%;
-
-      @media screen and (min-width: $bp-md) {
-        top: 475px;
-        background-position-x: 68%;
-        background-position-y: 90%;
-      }
+      background-repeat-y: no-repeat;
+      background-position-y: bottom;
+      background-size: 100%;
     }
   }
 
@@ -176,5 +172,9 @@
     @media screen and (max-width: $bp-lg) {
       max-width: 100% !important;
     }
+  }
+  
+  .p-relative {
+    position: relative;
   }
 }
