--- a/layouts/index.html
+++ b/layouts/index.html
@@ -160,7 +160,7 @@ page-home
   </div>
 
 {{/* Happy Users */}}
-<div class="happy-users">
+<div class="happy-users p-relative">
   <div class="container pt-4 pt-md-5 pb-5">
     <div class="row pt-md-3">
       <div class="text col-12 pb-md-0 pb-4 teaser-box">
