--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footer p-relative">
   <div class="container pt-md-5">
     <div class="row">
       <div class="col-12 pb-5">
