Update splide arrow hover.

--- a/assets/scss/components/_slider.scss
+++ b/assets/scss/components/_slider.scss
@@ -111,6 +111,10 @@
           right: 217px;
         }
       }
+
+      &:hover {
+        background: linear-gradient(-225deg,#14ba5a 0%,#009941 100%);
+      }
     }
   }
 
