Update happy user spacing.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -161,7 +161,7 @@ page-home
 
 {{/* Happy Users */}}
 <div class="happy-users p-relative">
-  <div class="container pt-4 pt-md-5 pb-5">
+  <div class="container pt-4 pt-md-5 pb-md-5">
     <div class="row pt-md-3">
       <div class="text col-12 pb-md-0 pb-4 teaser-box">
         {{ with .Site.GetPage "section" "home/happy-users" }}
