Update footer links.
Important is sadly necessary here.

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -29,7 +29,7 @@
       text-decoration: none;
 
       &:hover {
-        color: #4d97cd;
+        color: #4d97cd !important;
         text-decoration: none;
       }
     }
