--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -114,20 +114,7 @@
     background: $teaserCard-home;
   }
 
-  // Onboard Services & Keptn Workflows
-  .onboard-services {
-    .image {
-      @media screen and (min-width: $bp-md) {
-        margin-top: -8px;
-        margin-left: -8px;
-      }
-
-      p {
-        margin-bottom: 0;
-      }
-    }
-  }
-
+  // Happy-Users
   .happy-users {
     &:after {
       position: absolute;
