--- a/assets/scss/general/_variables.scss
+++ b/assets/scss/general/_variables.scss
@@ -45,6 +45,7 @@ $greyscale-home-100: rgba(34, 34, 34, 0.05);
 $textColor-home-900: #262626ff;
 $bannerColor-home: #005593;
 $teaserCard-home: #004486;
+$linkHoverColor-home: #4d97cd;
 
 
 // Links
