--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,9 @@
-<div class="footer p-relative">
+<div class="footer p-relative pb-5">
   <div class="container pt-md-5">
     <div class="row">
       <div class="col-12 pb-5">
-        <a class="footer-icon-link footer-icon-link--top float-right" onclick="window.scrollTo({ top: 0 });" href="javascript: void(0)">
+        <a class="footer-icon-link footer-icon-link--top float-right f-right" onclick="window.scrollTo({ top: 0 });"
+           href="javascript: void(0)">
           <img class="footer-icon" alt="Back to top" src="{{ .Site.BaseURL }}/images/home/icon-arrow.svg">
         </a>
       </div>
@@ -12,26 +13,27 @@
         <img class="footer-logo" alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/logo-white.svg">
       </div>
       <div class="col-6 col-md-2">
-        <p class="footer-title">Sitemap</p>
+        <p class="footer-title mb-2">Sitemap</p>
         <ul class="footer-links">
-          <li><a href="">Why Keptn?</a></li>
-          <li><a href="">Docs</a></li>
-          <li><a href="">Tutorials</a></li>
-          <li><a href="">Integration</a></li>
+          <li><a href="" class="footer-link">Why Keptn?</a></li>
+          <li><a href="" class="footer-link">Docs</a></li>
+          <li><a href="https://tutorials.keptn.sh" class="footer-link">Tutorials</a></li>
+          <li><a href="https://github.com/keptn-contrib" class="footer-link">Integration</a></li>
+          <li><a href="https://github.com/keptn/community" class="footer-link">Community</a></li>
         </ul>
       </div>
       <div class="col-6 col-md-2">
-        <p class="footer-title">Resources</p>
+        <p class="footer-title mb-2">Resources</p>
         <ul class="footer-links">
-          <li><a href="">Docs</a></li>
-          <li><a href="">Tutorials</a></li>
-          <li><a href="">Github</a></li>
-          <li><a href="">Releases</a></li>
-          <li><a href="">Issues</a></li>
+          <li><a href="" class="footer-link">Docs</a></li>
+          <li><a href="" class="footer-link">Tutorials</a></li>
+          <li><a href="" class="footer-link">Github</a></li>
+          <li><a href="" class="footer-link">Releases</a></li>
+          <li><a href="" class="footer-link">Issues</a></li>
         </ul>
       </div>
       <div class="col-md-2 pt-3 pt-md-0">
-        <p class="footer-title">Community</p>
+        <p class="footer-title mb-2">Community</p>
         <div class="footer-icons">
           <a class="footer-icon-link">
             <img class="footer-icon" alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/icon-slack.svg">
