--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -3,7 +3,7 @@
   <div class="container pt-5">
     <div class="row pt-4 pt-md-5">
       <div class="col-12 teaser-box">
-        <div class="logo-intro">
+        <div class="logo-intro d-none d-md-block">
           <a href="/">
             <img alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/hero/keptn-logo-white.svg">
           </a>
@@ -37,8 +37,8 @@
       <div class="col-md-2"></div>
     </div>
   </div>
-  <div class="container pl-0 pr-0 pt-4 pt-xl-0 pb-5">
-    <div class="row pb-4">
+  <div class="container pl-0 pr-0 pt-4 pt-xl-0 pb-sm-5">
+    <div class="row pb-sm-4">
       <div class="col-12 teaser-box teaser-box--negativeMargin pl-0 pr-0">
         <div class="d-none d-md-block">
           {{ partial "intro-svg.html" . }}
